# multivariate-linear-regression

./: .gitignore  .gitmodules  CMakeLists.txt  README.dev.md  README.md
data/: README.md
data/artificial/d2/n9/s0/: features.txt  labels.txt  true_residuals.txt
data/artificial/nfeatures2/nsamples9/sigma0/: true_weights.txt
data/housing/: features.txt  labels-thousands.txt  labels.txt
include/afuns/: afuns.h
include/ann/: afuns.h  network.h  ofuns.h
include/boxmuller/: boxmuller.h
include/data/: data.h
include/idx/: idx.h
include/idxread/: idxread.h
include/kwargs/: kwargs.h
include/layers/: layers.h
include/lfuns/: lfuns.h
include/matrix/: matrix.h
include/network/: network.h
include/ofuns/: ofuns.h
include/ops/: ops.h
include/rfuns/: rfuns.h
man/: README.md
man/boxmuller/: CMakeLists.txt  boxmuller_randn.3
man/kwargs/: CMakeLists.txt  kwargs.3
man/matrix/: CMakeLists.txt  matrix.3  matrix_accall.3  matrix_accdwn.3  matrix_accrgt.3  matrix_addsca.3  matrix_avgall.3  matrix_avgdwn.3  matrix_avgrgt.3  matrix_bctdwn.3  matrix_bctrgt.3  matrix_create.3  matrix_destroy.3  matrix_divsca.3  matrix_dotpro.3  matrix_ebeadd.3  matrix_ebediv.3  matrix_ebemap.3  matrix_ebesub.3  matrix_hadpro.3  matrix_hstack.3  matrix_ident.3  matrix_maxall.3  matrix_maxdwn.3  matrix_maxrgt.3  matrix_minall.3  matrix_mindwn.3  matrix_minrgt.3  matrix_ones.3  matrix_print.3  matrix_scapro.3  matrix_sdvall.3  matrix_sdvdwn.3  matrix_sdvrgt.3  matrix_stzdwn.3  matrix_subsca.3  matrix_testeq.3  matrix_transp.3  matrix_varall.3  matrix_vardwn.3  (+5 more)
man/mkdata/: CMakeLists.txt  mkdata.1
man/train/: CMakeLists.txt  train.1
src/_afuns/: CMakeLists.txt
src/_lfuns/: CMakeLists.txt
src/_ops/: CMakeLists.txt
src/_rfuns/: CMakeLists.txt
src/_runann/: CMakeLists.txt  data.c
src/afuns/: afuns.c
src/ann/: CMakeLists.txt  afuns.c  network.c  ofuns.c
src/boxmuller/: CMakeLists.txt  randn.c  randu.c  randu.h
src/data/: CMakeLists.txt  data.c
src/gdfit/: data.c
src/idx/: CMakeLists.txt  idx.c
src/idxread/: CMakeLists.txt  idxread.c
src/kwargs/: CMakeLists.txt  kwargs.c  kwargs.h  protected.c  protected.h
src/layers/: CMakeLists.txt  layers.c
src/lfuns/: CMakeLists.txt  lfuns.c
src/linear-classifier/: CMakeLists.txt  main.c
src/linear-regression-ssr-bgd-artificial/: CMakeLists.txt  data.c  data.h  main.c  plotting.c  plotting.h
src/linear-regression-ssr-bgd-housing/: CMakeLists.txt  data.c  data.h  main.c  plotting.c
src/matrix/: CMakeLists.txt  matrix.c
src/mkdata/: CMakeLists.txt  main.c  options.c  options.h
src/network/: CMakeLists.txt  network.c
src/ofuns/: CMakeLists.txt  ofuns.c
src/ops/: CMakeLists.txt  ops.c
src/rfuns/: rfuns.c
src/runann/: CMakeLists.txt  data.c  data.h  main.c
src/train/: CMakeLists.txt  data.h  main.c  options.c  options.h  plotting.c  plotting.h  run.c  run.h  standardized.c  standardized.h  unstandardized.c  unstandardized.h
test/ann/: CMakeLists.txt  test_network.c
test/boxmuller/: CMakeLists.txt  test_boxmuller.c
test/lfuns/: CMakeLists.txt  test_lfuns.c
test/matrix/: CMakeLists.txt  test_matrix.c
test/network/: CMakeLists.txt  test_network.c
test/ops/: CMakeLists.txt  test_ops.c
