cmake_minimum_required(VERSION 3.23...3.28)

project(project LANGUAGES C)

set(PROJECT_ROOT ${CMAKE_CURRENT_LIST_DIR})

if (NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Debug)
endif()

if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
  set_property(CACHE CMAKE_INSTALL_PREFIX PROPERTY VALUE "${CMAKE_BINARY_DIR}/dist")
endif()

add_subdirectory(${PROJECT_ROOT}/man/boxmuller)
add_subdirectory(${PROJECT_ROOT}/man/kwargs)
add_subdirectory(${PROJECT_ROOT}/man/matrix)
add_subdirectory(${PROJECT_ROOT}/man/mkdata)
add_subdirectory(${PROJECT_ROOT}/src/afuns)
add_subdirectory(${PROJECT_ROOT}/src/boxmuller)
add_subdirectory(${PROJECT_ROOT}/src/kwargs)
add_subdirectory(${PROJECT_ROOT}/src/lfuns)
add_subdirectory(${PROJECT_ROOT}/src/linear-regression-ssr-bgd-artificial)
add_subdirectory(${PROJECT_ROOT}/src/linear-regression-ssr-bgd-housing)
add_subdirectory(${PROJECT_ROOT}/src/matrix)
add_subdirectory(${PROJECT_ROOT}/src/mkdata)
add_subdirectory(${PROJECT_ROOT}/src/ops)
add_subdirectory(${PROJECT_ROOT}/src/rfuns)
add_subdirectory(${PROJECT_ROOT}/src/runann)
add_subdirectory(${PROJECT_ROOT}/test/boxmuller)
add_subdirectory(${PROJECT_ROOT}/test/lfuns)
add_subdirectory(${PROJECT_ROOT}/test/matrix)
add_subdirectory(${PROJECT_ROOT}/test/ops)
